force-app/main/default/objects/Feild_Ihg__c/Feild_Ihg__c.object-meta.xml
<CustomObject>
    <label>Feild Ihg</label>
    <nameField>
        <label>Feild Ihg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Feildihgs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>