force-app/main/default/objects/Feild_Ihg__c/fields/Ihg_bed__c.field-meta.xml
<CustomField>
    <fullName>Ihg_bed__c</fullName>
    <label>Ihg bed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NK</fullName>
            </value>
            <value>
                <fullName>NQQ</fullName>
            </value>
            <value>
                <fullName>SNK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>