force-app/main/default/objects/Feild_Ihg__c/fields/Ihg_check__c.field-meta.xml
<CustomField>
    <fullName>Ihg_check__c</fullName>
    <defaultValue>true</defaultValue>
    <description>check the check box</description>
    <label>Ihg check</label>
    <type>Checkbox</type>
</CustomField>