force-app/main/default/objects/Feild_Ihg__c/fields/Ihg_rooms__c.field-meta.xml
<CustomField>
    <fullName>Ihg_rooms__c</fullName>
    <label>Ihg rooms</label>
    <length>50</length>
    <type>Text</type>
</CustomField>